Construct New Capital Mechanic

--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -759,7 +759,33 @@
  # Rampa Rebellion
 
  rampa_strength:0 "\n\nCurrently, the Rampa Rebellion has a strength of: [?rampa_rebellion_strength|Y%%]."
+ 
+ # Construction of New [Capital]
 
+ RAJ_construction_of_new_capital:0 "Construction of [capital]"
+ RAJ_construction_of_new_capital_desc:0 "The construction of [capital] is an essential task in order to strengthen our hold on the subcontinent and the British imperial image. §YSir Edwin Lutyens§! and §YSir Herbert Baker§! of the Planning Committee will draw up the architectural plans independently of us, once our government has acquired additional land. These plans will then enable us to progress on the construction of [capital].\n\nLand Acquisition Progress: [?RAJ_land_acquisition_progress|Y%%1].\nPlanning Progress: [?RAJ_planning_progress|Y%%1].\nConstruction Progress: [?RAJ_construction_progress|Y%%1].\n"
+ 
+ RAJ_form_the_planning_committee:0 "Form the Planning Committee"
+ RAJ_form_the_planning_committee_reward:0 "We will establish a committee led by prominent British architects §YSir Edwin Lutyens§! and §YSir Herbert Baker§!. They will work on the architectural style, the layout of the city and the iconic buildings.\n"
+ RAJ_planning_committee_formed:0 "Planning Committee Formed"
+
+ land_acquisition_progress_over_100:0 "Land Acquisition Progress < §Y100.0%§!"
+ construction_progress_over_100:0 "Construction Progress < §Y100.0%§!"
+ construction_progress_under_planning_progress:0 "Construction Progress < Planning Progress"
+ construction_progress_under_10_from_planning_progress:0 "Planning Progress is §Y10.0%§! or more higher than Construction Progress."
+ construction_progress_equal_100:0 "Construction Progress = §Y100.0%§!"
+
+ RAJ_land_acquisition:0 "Land Acquisition"
+ RAJ_land_acquisition_reward:0 "Land Acquisition Progress will gain §G5.0%§!.\n"
+
+ RAJ_planning_committee_progress_on_architectural_plans:0 "Planning Committee Progress on Architectural Plans"
+ RAJ_planning_committee_progress_on_architectural_plans_reward:0 "Planning Progress will gain §G2.5%§!.\n"
+
+ RAJ_pursue_construction_efforts:0 "Pursue Construction Efforts"
+ RAJ_pursue_construction_efforts_reward:0 "Construction Progress will gain §G10.0%§!.\n"
+
+ RAJ_inaugurate_capital:0 "Inaugurate [capital]"
+ 
  #####################
  # RELATION MODIFIER #
  #####################
@@ -1099,6 +1125,9 @@ RAJ_government_of_india_act_1912_desc:0 ""
 
 RAJ_builder_of_the_raj:0 "Begin the Construction of [capital]"
 RAJ_builder_of_the_raj_desc:0 ""
+RAJ_builder_of_the_raj_reward:0 "Completing this focus will enable £GFX_decision_icon_small §YDecisions§! to construct §Y[capital]§!."
+
+RAJ_construction_efforts:0 "Construction Efforts"
 
 # War Mobilisation Path
 RAJ_mobilize_the_raj:0 "Mobilize the Raj"
