french aid package need help triggering

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5605,6 +5605,13 @@ ROM_continue_electrification:0 "Continue Electric Development"
 ROM_develop_danube_ports:0 "Develop the Danube Ports"
 empty_space_tt:0 " \n"
 ROM_enforce_fiscal_sustainability:0 "Enforce Fiscal Sustainability"
+ww1_romania.70.t:0 "Should we send an Aid Package to [ROM.GetName]?"
+ww1_romania.70.desc:0 "We could help out our ally [ROM.GetName] by sending them some equipment, as they aren't doing too well."
+ww1_romania.70.a:0 "We will always help out our allies."
+ww1_romania.70.b:0 "What has [ROM.GetName] done for us?"
+ww1_romania.71.t:0 "[FRA.GetName] sends us a Aid Package!"
+ww1_romania.71.desc:0 "Due to our struggles in the war, [FRA.GetName] has decided to send us a bunch of military equipment."
+ww1_romania.71.a:0 "Thanks, I guess."
 
 
 #custom tooltips
@@ -5620,7 +5627,7 @@ modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experie
 ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n"
 ROM_army_org2:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!"
 ww1_romania.69.t:0 "Results of Snap Elections"
-ww1_romania.69.t_d:0 "Riding a relative wave of stability and economic growth, Romanias incumbent party has managed to expand its majority in Romanias parliament, at the expense of the PC which has increasingly became an isolated political party. With this new mandate, we can continue our domestic agenda."
+ww1_romania.69.d:0 "Riding a relative wave of stability and economic growth, Romanias incumbent party has managed to expand its majority in Romanias parliament, at the expense of the PC which has increasingly became an isolated political party. With this new mandate, we can continue our domestic agenda."
 ww1_romania.6.a:0 "Great!"
 ROM_rthc:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n"
 ROM_carol2:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §R-1.00%§!"
