the numbers mason, what do the numbers mean
-Reichstag cap

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -421,3 +421,5 @@ GER_sending_disenters_to_the_front:0 "Send Disenters to the Front"
 GER_establishing_the_foreign_armies:0 "Establish the Foreign Armies"
 GER_blitzproduktion:0 "Blitzproduktion"
 GER_victory_economics:0 "Victory Economics"
+
+GER_election1_desc:0 "Predicted Election Outcome:\n§RSPD§! - [?SPD_upcoming]\n§8FVp§! - [?FVP_upcoming]\n§GNLP§! - [?NLP_upcoming]\n§qZ§! - [?Z_upcoming]\n§3FkP§! - [?FKP_upcoming]\n§cDkP§! - [?DKP_upcoming]\n§dWV§! - [?WV_upcoming]\n§NDRP§! - [?DRP_upcoming]\n§7RP§! - [?RP_upcoming]\n§LNM§! - [?NM_upcoming]\n§gNA§! - [?NA_upcoming]"
