--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1177,6 +1177,7 @@
  ww1_france.253.t:0 "French Support"
  ww1_france.253.d:0 "Barely independent, our nation already finds itself plunged into an asymmetrical war. Faced with this difficult ordeal, the French government assured us of its support and offered to send military advisors able to help us in our defense."
  ww1_france.253.a:0 "Any help is welcome"
+ fra_pol_lend_lease:0 "Our §Y[FRA.GetFlag]French§! benefactors will occasionally send us shipments of §Yguns§!, §Yartillery§! and §Ymore§!."
  ww1_france.253.b:0 "No"
 
  ww1_france.254.t:0 "Poland Accepted"
