--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -43,6 +43,9 @@
 
  RUS_support_in_civil_war:0 "Intervention in Russian Civil War"
  RUS_support_in_civil_war_desc:0 "With the defeat of the §Y[OTT.GetFlag]Ottoman Empire§! we have finally secured a sea route to the anti Bolshevik forces in the South. \n\nShipments of §Yguns§!, §Yartillery§! and §Ymore§! are now at our disposal.  \n\nAvailable Shipments: [?SRA_available_shipments|+0]\n\nAvailable shipments will increase by §Ytwo§! every month."
+
+ FRA_support_in_polish_war:0 "Intervention in the Polish Soviet War"
+ FRA_support_in_polish_war_desc:0 "With the defeat of §Y[GER.GetFlag][GER.getName]§!, we can finally support Anti Bolshevik Forces in eastern Europe.\n\nShipments of §Yguns§!, §Yartillery§! and §Ymore§! are now at our disposal.  \n\nAvailable Shipments: [?SRA_available_shipments|+0]\n\nAvailable shipments will increase by §Ytwo§! every month."
  
  send_equipment_to_FROM_rifles:0 "Send Rifles to [FROM.getName]"
  send_equipment_to_SRA_fighter:0 "Send Fighters to [FROM.getName]"
