Build New Capital

--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -543,9 +543,9 @@
  ww1_raj.42.d:0 "PLACEHOLDER"
  ww1_raj.42.a:0 "*Sigh*"
 
- ww1_raj.43.t:0 "Rampa Rebellion"
- ww1_raj.43.d:0 "PLACEHOLDER"
- ww1_raj.43.a:0 "Let's take the fight to them."
+ ww1_raj.44.t:0 "Inauguration of [capital]"
+ ww1_raj.44.d:0 "After years of meticulous planning, hard work, and tireless dedication, the construction of the [capital] is finally complete. This grand city, designed to serve as the administrative and symbolic center of British rule in India, now stands proudly as a testament to the power and reach of the Raj.\n\nSprawling avenues, majestic government buildings, and state-of-the-art infrastructure have transformed [capital] into a modern marvel, blending British architectural elegance with local cultural elements. The Viceroy and key officials held a grand opening ceremony, with public celebrations across the city."
+ ww1_raj.44.a:0 "Fabulous."
 
  #############
  # DECISIONS #
@@ -564,6 +564,7 @@
 
  RAJ_simla_convention:0 "Simla Convention"
  RAJ_simla_convention_desc:0 "With the recent independence of Tibet from China and London's meddling in its affairs, it is only natural that our administration sends a delegation to meet with the Tibetans and Chinese to discuss Tibet's position on the world stage, especially its geographical frontiers and relations with China."
+ RAJ_held_the_simla_convention:0 "Held the §YSimla Convention§!"
 
  RAJ_denounce_south_africa:0 "Denounce South-Africa"
  RAJ_denounce_south_africa_desc:0 "Charles Hardinge has on several occasions expressed his disapproval of South Africa's anti-Indian laws, and it is time that our administration officially condemns the South African government to put its words into action."
@@ -667,15 +668,15 @@
 
  RAJ_establish_committee_on_home_administration:0 "Committee on Home Administration"
  RAJ_establish_committee_on_home_administration_reward:0 "The §YCommittee on Home Administration§! will now be established!"
- committee_on_home_administration_established:0 "§YCommittee on Home Administration Established§!"
+ committee_on_home_administration_established:0 "§YCommittee on Home Administration§! Established"
 
  RAJ_establish_feetham_function_committee:0 "Feetham Function Committee"
  RAJ_establish_feetham_function_committee_reward:0 "The §YFeetham Function Committee§! will now be established!"
- feetham_function_committee_established:0 "§YFeetham Function Committee Established§!"
+ feetham_function_committee_established:0 "§YFeetham Function Committee§! Established"
 
  RAJ_establish_southborough_franchise_committee:0 "Southborough Franchise Committee"
  RAJ_establish_southborough_franchise_committee_reward:0 "The §YSouthborough Franchise Committee§! will now be established!"
- southborough_franchise_committee_established:0 "§YSouthborough Franchise Committee Established§!"
+ southborough_franchise_committee_established:0 "§YSouthborough Franchise Committee§! Established"
 
  # Propaganda Campaigns
  RAJ_indian_diplomacy_category:0 "Propaganda Campaigns"
@@ -1107,7 +1108,7 @@ RAJ_government_of_india_act_desc:0 ""
 # Survey of India Path
 RAJ_survey_of_india:0 "Survey of India"
 RAJ_survey_of_india_desc:0 ""
-RAJ_survey_of_india_reward:0 "\nCompleting this focus will unlock several §YExcavation§! and §YDefence§! focuses on the §YIndustrial§! side of the National focus tree.\n\nCompleting this focus will unlock several £GFX_decision_icon_small §YDecisions§! which will allow us to commission the Survey of India to improve the §YIndian Army§! should we fight on the §Rhome front§!."
+RAJ_survey_of_india_reward:0 "\nCompleting this focus will unlock several §YExcavation§! and §YDefence§! focuses on the §YIndustrial§! side of the National focus tree.\n\nCompleting this focus will unlock several £GFX_decision_icon_small §YDecisions§! which will allow us to commission the Survey of India to improve the §YIndian Army§! should we fight on the §RHome Front§!."
 RAJ_survey_of_india_reward2:0 "\nCompleting both this focus and the §YForeign and Political Departments§! focus will unlock the £GFX_decision_icon_small §YSimla Convention§! decision."
 
 RAJ_status_of_the_capital:0 "Status of the Capital"
@@ -1156,7 +1157,7 @@ RAJ_rowlatt_committee_reward:0 "We will establish the §YSedition Committee§!, 
 RAJ_rowlatt_act:0 "Rowlatt Act"
 RAJ_rowlatt_act_desc:0 ""
 
-
+RAJ_secure_the_north_east_territories:0 "Secure the North-East Territories"
 
 RAJ_the_question_of_natal:0 "The Question of Natal"
 RAJ_the_question_of_natal_desc:0 ""
