--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -571,7 +571,7 @@
  has_denounced_south_africa:0 "Has denounced South-Africa"
  
  RAJ_introduce_registration_of_motor_vehicles:0 "Introduce Registration of Motor Vehicles"
- RAJ_introduce_registration_of_motor_vehicles_reward:0 "Modify '§YTribal Raids§!' by:\nWeekly Manpower:§G +25§!\n£GFX_consumer_goods_texticon Consumer Goods Factories Factor:§Y +1.5%§!\nCounter intelligence:§G +0.05§!"
+ RAJ_introduce_registration_of_motor_vehicles_reward:0 "Modify '§YTribal Raids§!' by:\n£GFX_manpower_texticon Weekly Manpower:§G +25§!\n£GFX_consumer_goods_texticon Consumer Goods Factories Factor:§Y +1.5%§!\nCounter intelligence:§G +0.05§!"
 
  RAJ_inland_vessels_act:0 "Inland Vessels Act"
  RAJ_inland_vessels_act_reward:0 "Modify '§YTribal Raids§!' by:\nWeekly Manpower:§G +25§!\n£GFX_consumer_goods_texticon Consumer Goods Factories Factor:§Y +1.5%§!\nCounter intelligence:§G +0.05§!"
@@ -593,6 +593,8 @@
  RAJ_enforce_arms_regulations:0 "Enforce Arms Regulations"
 
  RAJ_organise_manoeuvres:0 "Organise Military Manoeuvres"
+ 
+ RAJ_reform_the_ghq:0 "Empower the GHQ"
 
  RAJ_organise_public_works:0 "Organise Public Works"
  RAJ_organise_public_works_1:0 "Organise Public Works"
@@ -910,7 +912,7 @@ RAJ_support_local_farmers_reward:0 "Modify '§YDe-Industrialisation§!' by:\n£G
 # Army Tree
 RAJ_indian_army_act:0 "Indian Army Act"
 RAJ_indian_army_act_desc:0 ""
-RAJ_indian_army_act_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_defence_texticon Division Defense:§G +10.0%§!\n\n"
+RAJ_indian_army_act_reward:0 "Modify '§YIndian Army§!' by:\n£GFX_organization_texticon Division Organization:§G +10.0%§!\n£GFX_defence_texticon Division Defense:§G +10.0%§!\n\nUnlocks Decisions:\n§Y£GFX_decision_icon_small Organise Military Manoeuvres\n§Y£GFX_decision_icon_small Reform the GHQ"
 
 RAJ_defence_of_the_northwest_frontier:0 "Protect the Northwest Frontier"
 RAJ_defence_of_the_northwest_frontier_desc:0 ""
@@ -1061,7 +1063,7 @@ RAJ_centralise_administrative_control_desc:0 ""
 
 RAJ_criminal_tribes_act:0 "Criminal Tribes Act"
 RAJ_criminal_tribes_act_desc:0 ""
-RAJ_criminal_tribes_act_reward:0 "Modify '§YTribal Raids§!' by:\nWeekly Manpower:§R -50§!\nMonthly Population:§R -5.0%§!\n£GFX_consumer_goods_texticon Consumer Goods Factories Factor:§Y -3.0%§!\nCounter intelligence:§G +0.15§!\n\n"
+RAJ_criminal_tribes_act_reward:0 "Modify '§YTribal Raids§!' by:\n£GFX_manpower_texticon Weekly Manpower:§R -50§!\n£GFX_population_texticon Monthly Population:§R -5.0%§!\n£GFX_consumer_goods_texticon Consumer Goods Factories Factor:§Y -3.0%§!\n£GFX_counter_intelligence Counter intelligence:§G +0.15§!\n\n"
 
 RAJ_introduce_vehicle_regulation:0 "Introduce Vehicle Regulations"
 RAJ_introduce_vehicle_regulation_desc:0 ""
