--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5623,6 +5623,7 @@ ww1_romania.70.b:0 "What has [ROM.GetName] done for us?"
 ww1_romania.71.t:0 "[FRA.GetName] sends us a Aid Package!"
 ww1_romania.71.desc:0 "Due to our struggles in the war, [FRA.GetName] has decided to send us a bunch of military equipment."
 ww1_romania.71.a:0 "Thanks, I guess."
+ROM_romanian_economy_idea:0 "Romanian Economy"
 
 
 #custom tooltips
