--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5231,6 +5231,7 @@ ROM_the_conservative_conservatives_desc:0 "The PC has started to lose its way as
 ROM_fixing_the_railways_desc:0 ""
 ROM_develop_the_north:0 "The Forgotten Half of the Country"
 ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
+ROM_agricultural_knowledge:0 "Expand Knowledge of New Agriculutral Techniques"
 ROM_prahova_valley:0 "Expand the Prahova Valley"
 ROM_prahova_valley_desc:0 "The Prahovan Valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the Prahovan Valley for our continued economic development."
 ROM_his_majestys_influence:0 "His Majesty's Influence"
@@ -5644,6 +5645,8 @@ ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §
 ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
+
+ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.00%§!"
 
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
 ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
