--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -588,7 +588,7 @@
  ww1_auh.202.t: "External Politics Meeting"
  ww1_auh.202.d: "Foreign Minister Czernin requested an urgent interview with [AUH.getLeader] to request explanations regarding the letters released by France. Indeed, Czernin had not been informed of the early negotiations initiated in secret and therefore did not believe he had lied during his speech in Vienna. Thus, immense discredit has fallen on [AUH.getLeader] and Czernin, the latter is not ready to accept it. Czernin thus directly threatens the rest of the government, if [AUH.getLeader] does not abdicate in favor of Eugene of Austria-Teschen, he will commit suicide."
  ww1_auh.202.a: "We can antagonize Zita de Bourbon-Parma for this whole story"
- ww1_auh.202.b: "Then you should kill youself, now"
+ ww1_auh.202.b: "Then you should kill yourself, now"
  ww1_auh.202.c: "[AUH.getLeader] must abdicate"
  AUH_czernin_suicide: "§YOttokar Czernin§! die"
 
