--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1553,7 +1553,7 @@
  SER_FROM_FROM:0 "From [THIS.GetName] :"
  SER_give_equipment_for_each_friendly_majors:0 "§YEquipments§! will be added for each of the following countries that has an §Yopinion§! of §YSerbia§! greater than §G10§!: \n§Y[FRA.getFlag][FRA.GetNameDef]§!, [ENG.getFlag]§Y [ENG.GetNameDef]§!, §Y[GER.getFlag][GER.GetNameDef]§!,§Y[AUH.getFlag][AUH.GetNameDef]§!, §Y[ITA.getFlag][ITA.GetNameDef]§!, §Y[RUS.getFlag][RUS.GetNameDef]§! and §Y[TUR.getFlag][TUR.GetNameDef]§!."
  
- SER_unlock_laws_decisions:0 "Unlocks severals §Y"Law Decisions"§! providing §GVarious Bonuses§!."
+ SER_unlock_laws_decisions:0 "Unlocks several §Y"Law Decisions"§! providing §GVarious Bonuses§!."
  SER_law_modernization:0 "Law Modernization"
  SER_armement_grants:0 "Armement Grants"
  SER_laws_desc:0 "The coalition has prevented many social advances in the country. We can turn things around by modernizing national legislation in a package of rapid reforms."
