saev for new committee balance of power

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2795,6 +2795,23 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_dismiss_yakub_cemil:0 "Dismiss [ROOT.TUR_yakub_cemil.GetName]"
  TUR_dismiss_yakub_cemil_desc:0 "[ROOT.TUR_yakub_cemil.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_yakub_cemil_tt:0 "Modify §YCommittee of Union and Progress§! by\n£garrison_texticon  Required Garrisons: §R+5%§!\n£operatives_root_out_resistance_texticon  Root Out Resistance mission effects: §R-5%§!\n£attack_militia_texticon  Militia Attack: §R-2.50%§!\n£defence_militia_texticon  Militia Defense: §R-2.50%§!\n\n"
+ TUR_express_state_authority_to_state:0 "Express State Authority to [FROM.GetName]"
+ TUR_express_state_authority_to_state:0 "While we've given wide range of autonomy in policies in [FROM.GetName], this shouldn't mean they're free to do whatever they want. We should limit their range of movement to keep the cohesion of the empire together."
+ TUR_local_central_rule_decisions:0 "Local-Central Committee Influence"
+ TUR_preserve_local_authority:0 "Preserve Local Authority"
+ TUR_preserve_local_authority_desc:0 "While we derive our power from the Central Committee, our interests still clash from time to time. To protect our own interests, we have to preserve our local authority."
+ TUR_local_construction_endeavours:0 "Local Construction Endeavours"
+ TUR_local_construction_endeavours_desc:0 "Our regional authority could be increased by taking construction endeavours. This way we can link infrastructure and other structures to our command."
+ TUR_raise_local_conscripts:0 "Raise Local Conscripts"
+ TUR_raise_local_conscripts_desc:0 "While the central government has the main fighting force, this doesnt prevent us from raising our small conscriptions. With our own forces, we can increase our authority in the province."
+ TUR_loyalty_in_the_province:0 "Loyalty in the Province"
+ TUR_loyalty_in_the_province_desc:0 "Everyone in the province must be loyal to us. As we put men with loyalties to us in the region, we can aim to increase the limits of our local rule."
+ TUR_weapon_shipments_from_central_government:0 "Weapon Shipments from the Central Government"
+ TUR_weapon_shipments_from_central_government_desc:0 "Compared to the central government, we lack the ability to produce our equipments. There's no harm in relying the central government for armament support."
+ TUR_ask_for_food_supplies:0 "Ask for Food Supplies"
+ TUR_ask_for_food_supplies_desc:0 "The province we control is struggling in terms of food and supplies. Getting support from the central government should relieve our troubles."
+ TUR_bureaucratic_support:0 "Bureaucratic Support"
+ TUR_bureaucratic_support_desc:0 "While we have wide autonomy over the region we control, we still run things with the support of the government. We can rely on the central government for bureaucratic support to sort things out."
 
  TUR_is_committee_government_of_ROOT:0 "Is §YCommittee Government§! of §Y[ROOT.GetNameDef]§!"
  TUR_get_opda_name:0 "[TUR_get_opda_name]"
