--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1046,6 +1046,8 @@
  TUR_committee_member_5_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 60%§!"
  TUR_committee_member_6_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 55%§!"
  TUR_committee_member_7_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%§!"
+ TUR_committee_influence:0 "Committee Influence"
+ TUR_committee_influence_desc:0 "The Central Committee is trying to increase its influence on our regional authority. While our authority is being undermined, the state's influence comes with its own benefits."
  TUR_ottoman_4th_army:0 "Ottoman 4th Army"
  TUR_ottoman_4th_army_desc:0 "When our commandeer Cemâl Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the Ottoman Fourth Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
  TUR_ottoman_4th_army_tt:0 "[TUR_o4a_battalion_limit]"
