--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9012,15 +9012,15 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  
  SRA_vol_departure:0 "Departure of Volunteer Army"
 
- send_equipment_to_SRA_support:0 "Send Support equipment to [SRA.getname]"
- send_equipment_to_SRA_truck:0 "Send Trucks to [SRA.getname]"
+ send_equipment_to_SRA_support:0 "Send Support equipment to [FROM.getname]"
+ send_equipment_to_SRA_truck:0 "Send Trucks to [FROM.getname]"
 
- SRA_lend_lease_mock_inf:0 "Infantry Equipment shipment from [ENG.getname]"
- SRA_lend_lease_mock_support:0 "Support Equipment shipment from  [ENG.getname]"
- SRA_lend_lease_mock_arty:0 "Artillery shipment from [ENG.getname]"
- SRA_lend_lease_mock_truck:0 "Truck shipment from [ENG.getname]"
- SRA_lend_lease_mock_fighter:0 "Fighter shipment from  [ENG.getname]"
- SRA_lend_lease_mock_tanks:0 "Tank shipment from  [ENG.getname]"
+ SRA_lend_lease_mock_inf:0 "Entente Infantry Equipment shipment"
+ SRA_lend_lease_mock_support:0 "Entente Support Equipment shipment"
+ SRA_lend_lease_mock_arty:0 "Entente Artillery shipment"
+ SRA_lend_lease_mock_truck:0 "Entente Truck shipment"
+ SRA_lend_lease_mock_fighter:0 "Entente Fighter shipment"
+ SRA_lend_lease_mock_tanks:0 "Entente Tank shipment"
  SRA_lend_lease_ongoing_tt:0 "At least one available shipment"
 
  SRA_rada_interactions:0 "The Kuban Rada"
@@ -9111,9 +9111,9 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SIB_buy_FROM_infantry_weapons:0 "Buy [FROM.GetAdjective] infantry equipment"
  SIB_buy_FROM_support_equipment:0 "Buy [FROM.GetAdjective] support equipment"
  SIB_buy_FROM_artillery_equipment:0 "Buy [FROM.GetAdjective] artillery"
- SIB_add_05_to_var:0 "This will cost us §H5%§! from our §HGold Reserve§!"
+ SIB_add_05_to_var:0 "This will cost us §H2.5%§! from our §HGold Reserve§!"
  SIB_add_02_to_var:0 "This will cost us §H2%§! from our §HGold Reserve§!"
- SIB_has_more_than_04:0 "We have more than §H4%§! in our §HGold Reserve§!"
+ SIB_has_more_than_024:0 "We have more than §H2.4%§! in our §HGold Reserve§!"
  SIB_ongoing_infantry_import:0 "Already importing infantry equipment"
  SIB_ongoing_support_import:0 "Already importing support equipment"
  SIB_ongoing_artillery_import:0 "Already importing artillery"
