Berlin Committee First Act

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1067,6 +1067,8 @@
  RAJ_swaraj_party:0 "SP"
  RAJ_swaraj_party_long:0 "Swaraj Party"
 
+ RIN_berlin_committee_party:0 "Berlin Committee"
+
  # (old content, to be deleted at some point)
  RAJ_lost_great_war:0 "Townshend Clique"
  RAJ_lost_great_war_long:0 "British Government Remnants"
