--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -240,6 +240,12 @@
  ww1_war_raj.6.d:0 "Madras finds itself at the center of industrial turmoil as the workers of the Buckingham and Carnatic Mills have initiated a widespread strike, commencing on March 1, 1921. This labour unrest arises from a series of grievances regarding wage reductions and working conditions, drawing attention to the pressing issues faced by the workforce in our burgeoning textile industry.\n\nReports indicate that the strike was precipitated by the management’s recent decision to reduce wages, which many workers assert is unjustifiable given the rising cost of living in the region. In a bold demonstration of solidarity, thousands of labourers have ceased work, calling for the restoration of fair wages and improved conditions. The atmosphere is charged as workers gather in large numbers, raising banners and voicing their demands for justice."
  ww1_war_raj.6.a:0 "We must protect the Workers."
  ww1_war_raj.6.b:0 "We must protect the Mils Owners."
+
+ ww1_war_raj.7.t:0 "The King's War With [GER.GetNameDef]"
+ ww1_war_raj.7.d:0 "As the flames of the Great War spread across Europe, the [ENG.GetAdjective] Empire finds itself embroiled in a conflict against the Central Powers. Following [ENG.GetNameDef] formal declaration of war on [GER.GetName] and her allies, [RAJ.GetNameDef] has been called upon to fulfill its duty to the Crown.\n\n[RAJ.GetLeader] has officially proclaimed the Raj's entrance into the war, pledging both resources and men to the cause. The subcontinent will now mobilize its vast manpower and industries to support [ENG.GetNameDef] war effort, with [RAJ.GetAdjective] troops expected to fight on numerous fronts, from the deserts of Mesopotamia to the trenches of Europe."
+ ww1_war_raj.7.a:0 "Mobilisation shall follow suit."
+ ww1_war_raj.7.b:0 "I'd rather fight for a free India!"
+ RAJ_form_the_berlin_committee:0 "Various §qIndian Nationalist Leaders§! have come together to organise the §rNationalist Resistance§! in ([GER.GetFlag]) §YGermany§!. Clicking on this option will allow us to play as them and, perhaps, achieve §YTotal Indian Independence§!."
  
  # Flavor Events
  
