--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -760,6 +760,7 @@
  LIB:0 "Liberia"
  LIB_DEF:0 "Liberia"
  LIB_ADJ:0 "Liberian"
+
  RAJ_fascism:0 "Revolutionnary India"
  RAJ_fascism_DEF:0 "the indian revolutionnaries"
  RAJ_democratic:0 "Republic of India"
@@ -772,6 +773,10 @@
  RAJ:0 "India"
  RAJ_DEF:0 "India"
  RAJ_ADJ:0 "Indian"
+
+ RIN_neutrality:0 "Berlin Committee"
+ RIN_neutrality_DEF:0 "the Berlin Committee"
+
  CRO_subject:0 "Croatia"
  CRO_subject_DEF:0 "Croatia"
  CRO_fascism:0 "Croatian State"
