--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -44,6 +44,9 @@
  RUS_support_in_civil_war:0 "Интервенция в гражданскую войну в России"
  RUS_support_in_civil_war_desc:0 "С поражением §Y[OTT.GetFlag]Османской Империи§! мы наконец-то обеспечили морской путь к антибольшевистским силам на юге. \n\nВ нашем распоряжении находится §Yоружие§!, §Yартиллерия§! и §Yмногое другое§!.  \n\nДоступные поставки: [?SRA_available_shipments|+0]\n\nДоступные поставки будут увеличиваться на §Yдве§! партии каждый месяц."
  
+ FRA_support_in_polish_war:0 "Интервенция в Советско-польскую войну"
+ FRA_support_in_polish_war_desc:0 "После поражения §Y[GER.GetFlag]Германии§! мы наконец-то можем поддержать антибольшевистские силы в Восточной Европе.\n\nВ нашем распоряжении находится §Yоружие§!, §Yартиллерия§! и §Yмногое другое§!.  \n\nДоступные поставки: [?SRA_available_shipments|+0]\n\nДоступные поставки будут увеличиваться на §Yдве§! партии каждый месяц."
+ 
  send_equipment_to_FROM_rifles:0 "Отправить винтовки государству [FROM.getName]"
  send_equipment_to_SRA_fighter:0 "Отправить истребители государству [FROM.getName]"
  send_equipment_to_SRA_artillery:0 "Отправить артиллерию государству [FROM.getName]"
@@ -1239,7 +1242,7 @@
  SOV_german_offensive_mission_desc:0 "Война с Германией продолжается. Они начнут наступление, если мы не подпишем Брестский договор. У нас мало времени, Германия попытается дойти до Петрограда."
  SOV_red_terror_category:0 "Красный террор"
  SOV_train_of_trotsky:0 "Маршрут поезда Троцкого: [FROM.GetName]"
- SOV_train_of_trotsky_desc:0 "Леон Троцкий решил лично проехать через всю Россию, чтобы агитировать население поддержать Красную Армию. Мы подготовили для него поезд, чтобы ему было удобно быстро передвигаться по фронту."
+ SOV_train_of_trotsky_desc:0 "Лев Троцкий решил лично проехать через всю Россию, чтобы агитировать население поддержать Красную Армию. Мы подготовили для него поезд, чтобы ему было удобно быстро передвигаться по фронту."
  SOV_crush_the_peasant_uprising:0 "Подавить крестьянское восстание"
  SOV_crush_the_soldier_rebellion:0 "Подавить солдатское восстание"
  SOV_crush_the_sailor_mutiny:0 "Подавить мятеж моряков"
@@ -9009,15 +9012,15 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  
  SRA_vol_departure:0 "Отступление Добровольческой армии"
 
- send_equipment_to_SRA_support:0 "Отправить вспомогательное оборудование [SRA.getname]"
- send_equipment_to_SRA_truck:0 "Отправить грузовики [SRA.getname]"
+ send_equipment_to_SRA_support:0 "Отправить дополнительное оснащение в государство [FROM.getname]"
+ send_equipment_to_SRA_truck:0 "Отправить грузовики в государство [FROM.getname]"
 
- SRA_lend_lease_mock_inf:0 "Доставка пехотного снаряжения из Великобритании"
- SRA_lend_lease_mock_support:0 "Доставка вспомогательного оборудования из Великобритании"
- SRA_lend_lease_mock_arty:0 "Доставка артиллерии из Великобритании"
- SRA_lend_lease_mock_truck:0 "Доставка автотранспорта из Великобритании"
- SRA_lend_lease_mock_fighter:0 "Доставка истребителей из  Великобритании"
- SRA_lend_lease_mock_tanks:0 "Доставка танков из Великобритании"
+ SRA_lend_lease_mock_inf:0 "Поставка пехотного снаряжения из стран Антанты"
+ SRA_lend_lease_mock_support:0 "Поставка дополнительного оснащения из стран Антанты"
+ SRA_lend_lease_mock_arty:0 "Поставка артиллерии из стран Антанты"
+ SRA_lend_lease_mock_truck:0 "Поставка автотранспорта из стран Антанты"
+ SRA_lend_lease_mock_fighter:0 "Поставка истребителей из стран Антанты"
+ SRA_lend_lease_mock_tanks:0 "Поставка танков из стран Антанты"
  SRA_lend_lease_ongoing_tt:0 "Как минимум одна доступная партия"
 
  SRA_rada_interactions:0 "Кубанская Рада"
@@ -9108,9 +9111,9 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SIB_buy_FROM_infantry_weapons:0 "Купить [FROM.GetAdjective]ое пехотное снаряжение"
  SIB_buy_FROM_support_equipment:0 "Купить [FROM.GetAdjective]ое вспомогательное оборудование"
  SIB_buy_FROM_artillery_equipment:0 "Купить [FROM.GetAdjective]ую артиллерию"
- SIB_add_05_to_var:0 "Это будет стоить нам §H5%§! от нашего §Hзолотого запаса§!"
+ SIB_add_05_to_var:0 "Это будет стоить нам §H2.5%§! от нашего §Hзолотого запаса§!"
  SIB_add_02_to_var:0 "Это будет стоить нам §H2%§! от нашего §Hзолотого запаса§!"
- SIB_has_more_than_04:0 "Мы имеем более §H4%§! в нашем §Hзолотом запасе§!"
+ SIB_has_more_than_04:0 "Мы имеем более §H2.4%§! в нашем §Hзолотом запасе§!"
  SIB_ongoing_infantry_import:0 "Уже импортирует пехотное снаряжение"
  SIB_ongoing_support_import:0 "Уже импортирует вспомогательное оборудование"
  SIB_ongoing_artillery_import:0 "Уже импортирует артиллерию"
