--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -588,7 +588,7 @@
  ww1_auh.202.t:0 "External Politics Meeting"
  ww1_auh.202.d:0 "Foreign Minister Czernin requested an urgent interview with [AUH.getLeader] to request explanations regarding the letters released by France. Indeed, Czernin had not been informed of the early negotiations initiated in secret and therefore did not believe he had lied during his speech in Vienna. Thus, immense discredit has fallen on [AUH.getLeader] and Czernin, the latter is not ready to accept it. Czernin thus directly threatens the rest of the government, if [AUH.getLeader] does not abdicate in favor of Eugene of Austria-Teschen, he will commit suicide."
  ww1_auh.202.a:0 "We can antagonize Zita de Bourbon-Parma for this whole story"
- ww1_auh.202.b:0 "Then you should kill youself, now"
+ ww1_auh.202.b:0 "Then you should kill yourself, now"
  ww1_auh.202.c:0 "[AUH.getLeader] must abdicate"
  AUH_czernin_suicide:0 "§YOttokar Czernin§! die"
 
@@ -1177,6 +1177,7 @@
  ww1_france.253.t:0 "French Support"
  ww1_france.253.d:0 "Barely independent, our nation already finds itself plunged into an asymmetrical war. Faced with this difficult ordeal, the French government assured us of its support and offered to send military advisors able to help us in our defense."
  ww1_france.253.a:0 "Any help is welcome"
+ fra_pol_lend_lease:0 "Our §Y[FRA.GetFlag]French§! benefactors will occasionally send us shipments of §Yguns§!, §Yartillery§! and §Ymore§!."
  ww1_france.253.b:0 "No"
 
  ww1_france.254.t:0 "Poland Accepted"
@@ -9489,10 +9490,10 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_england.264.d: "As a result of the Great War, the British Empire lost its dominance and imperial order. The Cabinet resigned in disgrace, and no party won a majority in the general election promised immediately after the Armistice. Moreover, extremist political forces that rejects even parliamentarism are beginning to find a voice, and the people seem to be stirred."
  ww1_england.264.a: "Keep calm and carry on..."
  ww1_england.265.t:0 "British Liberals Win 1910 Elections"
- ww1_england.265.d:0 "The second elections in UK this year have been held due to Liberal need to gain stable enough mandate for Parliament Act. Unsurprisingly, while Conservatives had gathered the majority vote, Liberals emerged as the end victors thanks to Liberal coalition with Irish Parliamentary party. It is expected that Prime Minister Herbert Henry Asquith will continue to rule with a stable enough majority for the foreseable future, until the next elections that should take place 4 years later"
+ ww1_england.265.d:0 "The 1910 General Election in the United Kingdom has resulted in a decisive victory for the Liberal Party, led by Prime Minister H.H. Asquith. Facing a fierce challenge from the Conservative Party and rising Labour interests, the Liberals managed to secure enough seats to form a government with the support of the Irish Parliamentary Party. This election has major implications for British politics, especially regarding the ongoing constitutional crisis and the People's Budget. The Liberal Party's platform of social reform, including old-age pensions and the progressive taxation system, now stands on the brink of full implementation. With the backing of King George V, Asquith's government is poised to introduce significant political changes that could reshape the relationship between the House of Commons and the House of Lords."
  ww1_england.265.a:0 "An expected result"
  ww1_england.266.t:0 "British Conservatives Win 1910 Elections"
- ww1_england.266.d:0 "The second elections in UK this year have been held due to Liberal need to gain stable enough mandate for Parliament Act. Surprisingly, after Balfour's surprise removal from the Conservative party and his subsequent retirement, Conservative and Liberal Unionist Party under the leadership of [ENG.GetLeader] has stolen the win from the Liberals. With Liberal hopes dashed, incumbent prime minister Herbert Henry Asquith has congratulated the victors and expressed his hopes for the prosperity in Empire's future."
+ ww1_england.266.d:0 "The 1910 General Election has concluded with a stunning victory for the Conservative Party, led by [ENG.GetLeader] after Balfour's surprise retirement mere months before elections. Despite fierce competition from the Liberals, the Tories have secured enough seats to form a government, marking a turning point in British politics. Their victory reflects widespread opposition to the Liberals' radical social reforms, including the controversial People's Budget and the push for Irish Home Rule. The Conservatives, who rallied around the defense of the House of Lords and traditional institutions, now find themselves tasked with addressing the ongoing constitutional crisis. As the country looks ahead, Balfour's government will seek to maintain stability, defend the British Empire, and uphold the monarchy's influence against further Liberal reforms."
  ww1_england.266.a:0 "Unexpected results"
  ww1_england.267.t:0 "The 1910 Election"
  ww1_england.267.d:0 "A General Election has rolled around in the United Kingdom. As expected, it was an easy Liberal victory. The results were almost the same as the ones from earlier this year, with Conservatives once again winning the popular vote but Liberals with their allies in Irish Parliamentary party stealing the win from the Conservative and Liberal Unionist party"
@@ -11127,7 +11128,7 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_italianturkish.1.d:0 "Нам отказали в колонии в Тунисе, и поэтому мы должны искать любую территорию, доступную для нее. Турки изолированы и слабы, и, похоже, являются наилучшей целью для «освобождения» новых итальянских колоний. Возможно, в ходе войны мы даже сможем получить еще несколько территорий! Italia combatterà!"
  ww1_italianturkish.1.a:0 "Завоевать Ливию!"
  ww1_italianturkish.2.t:0 "Лондонская конференция - Победа османов"
- ww1_italianturkish.2.d:0 "Османская империя при поддержке европейских дипломатов обратилась к Лондону с просьбой вмешаться в итало-турецкую войну. Теперь Турция требует вывести войска из Ливии и выплатить репарации за эту провокацию. Мы должны немедленно прекратить нашу войну."
+ ww1_italianturkish.2.d:0 "Османская империя при поддержке европейских дипломатов обратилась к Лондону с просьбой вмешаться в Итало-турецкую войну. Теперь Турция требует вывести войска из Ливии и выплатить репарации за эту провокацию. Мы должны немедленно прекратить нашу войну."
  ww1_italianturkish.3.t:0 "Мы проигрываем!"
  ww1_italianturkish.3.d:0 "Хотя Ливия - хороший кусок земли и единственная настоящая турецкая колония, кажется, что лучше отказаться от нее, чем потерять нашу империю. Должны ли мы послать запрос о мире?"
  ww1_italianturkish.3.a:0 "Сократить наши потери!"
