RCW traits, peace and template fix

--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -466,3 +466,11 @@
  minister_of_national_defense:0 "Minister of National Defense"
  administration_reformer:0 "Administration Reformer"
  judicial_reformer:0 "Judicial Reformer"
+ black_baron:0 "Black Baron"
+ master_organizer:0 "Master Organizer"
+ staunch_traditionalist:0 "Staunch Traditionalist"
+ divided_coalition_leader:0 "Divided Coalition Leader"
+ steadfast_commander:0 "Steadfast Commander"
+ supreme_ruler:0 "Supreme Ruler"
+ ruthless_commander:0 "Ruthless Commander"
+ anti_communist_crusader:0 "Anti-Communist Crusader"
