--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5646,7 +5646,17 @@ ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army O
 ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 
-ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.00%§!"
+ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\nMax Factories in a State: §G+2.50%§!"
+ROM_cte.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
+ROM_ift.tt:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05"
+ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
+ROM_edd.tt:0 "Modify §YRomanian Economy§! by\nDockyard Output: §G+5.00%§!"
+
+ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.0%§!"
+ROM_tdga:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
+ROM_si.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\nConstruction Speed: §G+5.00%§!"
+
+ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
 ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
@@ -5656,7 +5666,7 @@ ROM_adapt_times.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division
 ROM_for_truth.tt:0 "Modify §YRomanian Army§! by\n£defence_texticon Division Defense: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
 ROM_acds:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!"
 ROM_ads:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+10.00%§!"
-
+ROM_fight_for_increased_exports:0 "Increase Interest in Romanian Cereals"
 member_of_pc:0 "Member of §cPC§!"
 
 member_of_pnl:0 "Member of §lPNL§!"
