--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5648,6 +5648,8 @@ ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Divi
 
 ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\nMax Factories in a State: §G+2.50%§!"
 ROM_cte.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
+ROM_mafa:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
+
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05"
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_edd.tt:0 "Modify §YRomanian Economy§! by\nDockyard Output: §G+5.00%§!"
@@ -5655,6 +5657,7 @@ ROM_edd.tt:0 "Modify §YRomanian Economy§! by\nDockyard Output: §G+5.00%§!"
 ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.0%§!"
 ROM_tdga:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
 ROM_si.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\nConstruction Speed: §G+5.00%§!"
+ROM_gati:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\nConsumer Goods Factories factor: §Y+5.0%§!"
 
 ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 
