--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5650,6 +5650,10 @@ ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\nMax Factories in a State: §G
 ROM_cte.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
 ROM_mafa:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 
+ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
+ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
+
+
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05"
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_edd.tt:0 "Modify §YRomanian Economy§! by\nDockyard Output: §G+5.00%§!"
