--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -6124,7 +6124,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_finish_alasehir_afyon_line:0 "Finish Alaşehir-Afyon Line"
  TUR_finish_alasehir_afyon_line_desc:0 "A part of the İzmir Afyon railway remains unfinished. We should lay last bit of remaining railway tracks on the path to complete the construction."
  TUR_increase_aydin_centralization_2:0 "Modify §YCentralization§! of §YAydın Vilayet§! by §G+2%§!\n"
- TUR_increase_konya_centralization_3:0 "Modify §YCentralization§! of §YKonya Vilayet§! by §G+3%§!\n"
+ TUR_increase_hudavendigar_centralization_3:0 "Modify §YCentralization§! of §YHüdavendigar Vilayet§! by §G+3%§!\n"
  TUR_extend_izmir_egirdir_line:0 "Extend İzmir-Eğirdir Line"
  TUR_extend_izmir_egirdir_line_desc:0 "As first İzmir railway line, first railway in our empire, was a success, we can look for extending its usage. As we've already started the extention of this line, we can finally finish its final destination."
  TUR_increase_konya_centralization_5:0 "Modify §YCentralization§! of §YKonya Vilayet§! by §G+5%§!\n"
