--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1102,6 +1102,8 @@
  HJZ_armistice_in_the_revolt:0 "Armistice between the Ottoman Empire and the Sharifian Revolt"
  HJZ_armistice_in_the_revolt_desc:0 "Ever since the start of the Sharifian Revolt, the bearers of the Arab Revolt flag has been struggling against their old overlords. As peace talks are underway, perhaps things could settle well."
  HJZ_armistice_in_the_revolt_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
+ TUR_mustafa_rahmi_committee:0 "Mustafa Rahmi Bey"
+ TUR_mustafa_rahmi_committee_desc:0 "\n\n\n\n\n\n£GFX_TUR_mustafa_rahmi_texticon \n\n\n\n\n\n\n\nMustafa Rahmi Bey, the governor of Aydın Vilayet, is a prominent member of the Committee of Union and Progress. His connections to the committee has allowed himself to gain a wide range of autonomy in his actions, even though some of his policies do not allign with the state."
 
  AUH_austrian_integration:0 "Austrian Integration"
  AUH_condominium_of_bosnia_and_herzegovina:0 "Condominium of Bosnia and Herzegovina"
