--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5231,7 +5231,6 @@ ROM_the_conservative_conservatives_desc:0 "The PC has started to lose its way as
 ROM_fixing_the_railways_desc:0 ""
 ROM_develop_the_north:0 "The Forgotten Half of the Country"
 ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
-ROM_agricultural_knowledge:0 "Expand Knowledge of New Agriculutral Techniques"
 ROM_prahova_valley:0 "Expand the Prahova Valley"
 ROM_prahova_valley_desc:0 "The Prahovan Valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the Prahovan Valley for our continued economic development."
 ROM_his_majestys_influence:0 "His Majesty's Influence"
@@ -5605,6 +5604,23 @@ ww1_romania.71.t:0 "[FRA.GetName] sends us a Aid Package!"
 ww1_romania.71.desc:0 "Due to our struggles in the war, [FRA.GetName] has decided to send us a bunch of military equipment."
 ww1_romania.71.a:0 "Thanks, I guess."
 ROM_romanian_economy_idea:0 "Romanian Economy"
+ROM_continue_electrification:0 "Continue Electrification"
+ROM_import_foreign_tools:0 "Import Foreign Tools"
+ROM_concessions_to_the_upper_class:0 "Concessions to the Upper Class"
+ROM_support_industrialists:0 "Support Industrialists"
+ROM_agricultural_knowledge:0 "New Agricultural Techniques"
+ROM_government_aid_to_industries:0 "Subsidies to Industries"
+ROM_move_away_from_an_export_based_economy:0 "Move Away From an Export-Based Economy"
+ROM_doubuja_steel_industry:0 "Dobrujan Steel Industry"
+ROM_expand_doubruja_dockyards:0 "Expand Danube Ports"
+ROM_increase_cereal_exports:0 "Increase Cereal Exports"
+ROM_ramp_up_exports_of_fruit_grains_and_seeds:0 "Ramp Up Exports of Grains"
+ROM_increase_gold_and_silver_exports:0 "Export Gold and Silver"
+ROM_expansion_of_the_lumber_industry:0 "Expand the Logging Industry"
+ROM_trade_deals_with_germany_and_austria:0 "Trade Deal With the Central Powers"
+ROM_close_the_trade_defict:0 "Close the Trade Deficit"
+
+
 
 
 #custom tooltips
@@ -5646,24 +5662,24 @@ ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army O
 ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 
-ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\nMax Factories in a State: §G+2.50%§!"
-ROM_cte.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
-ROM_mafa:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
+ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+2.50%§!"
+ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
+ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 
 ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
 
 
-ROM_ift.tt:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05"
+ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§W"
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
-ROM_edd.tt:0 "Modify §YRomanian Economy§! by\nDockyard Output: §G+5.00%§!"
+ROM_edd.tt:0 "Modify §YRomanian Economy§! by\n£dockyard_output_texticon Dockyard Output: §G+5.00%§!"
 
 ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.0%§!"
 ROM_tdga:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
-ROM_si.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\nConstruction Speed: §G+5.00%§!"
-ROM_gati:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\nConsumer Goods Factories factor: §Y+5.0%§!"
+ROM_si.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
+ROM_gati:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 
-ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
+ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor\: §Y-5.0%§!"
 
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
 ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
